<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deleteCourseRecylerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteAssignment">

    <Button
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="572dp"
        android:text="@string/returnOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/deleteCourseDropdown"
        android:layout_width="253dp"
        android:layout_height="41dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="145dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteDropdownLabel" />

    <TextView
        android:id="@+id/deleteAssignmentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="32dp"
        android:text="@string/deleteAssignment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteDropdownLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="102dp"
        android:text="@string/chooseCourseLabel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deleteCourseRecyclerView"
        android:layout_width="409dp"
        android:layout_height="308dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="200dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteCourseDropdown" />
</RelativeLayout>