<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAssignment">

    <Button
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnOne"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEarned" />

    <TextView
        android:id="@+id/addAssignmentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/addAssignment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/courseSpinner"
        android:layout_width="136dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/courseLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/courseLabel"
        app:layout_constraintTop_toTopOf="@+id/courseLabel" />

    <TextView
        android:id="@+id/courseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Course:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/courseSpinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAssignmentText"
        app:layout_constraintVertical_bias="0.089999974" />

    <EditText
        android:id="@+id/editAssignmentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Assignment Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAssignmentText"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/editPossible"
        android:layout_width="81dp"
        android:layout_height="59dp"
        android:layout_marginEnd="128dp"
        android:ems="10"
        android:hint="Possible"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/slash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/slash"
        app:layout_constraintTop_toTopOf="@+id/slash" />

    <EditText
        android:id="@+id/editEarned"
        android:layout_width="81dp"
        android:layout_height="59dp"
        android:layout_marginStart="128dp"
        android:ems="10"
        android:hint="Earned"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/slash"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAssignmentName"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/slash"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="/"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/editEarned"
        app:layout_constraintEnd_toStartOf="@+id/editPossible"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editEarned"
        app:layout_constraintTop_toTopOf="@+id/editEarned" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="@+id/goBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/goBack"
        app:layout_constraintTop_toTopOf="@+id/goBack" />

</androidx.constraintlayout.widget.ConstraintLayout>